--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Los bots de la salle"
-baseURL = "https://example.com"
+baseURL = "https://master.d10rvtclvxnfv4.amplifyapp.com/"
 languageCode = "en-us"
 theme = "gohugo-theme-ananke"
 
